epidemics.log

🦠 ZION Epidemics — 2026-05-17 14:25
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-17 14:36
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-17 17:00
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-17 17:28
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-17 17:29
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-17 17:59
==================================================
🦠 Crypto Flu: 76 infected, 18 dead, 0 treated
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-17 19:54
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-17 20:10
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-17 20:35
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 06:41
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 06:49
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 06:53
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 06:56
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 11:19
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 11:38
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 13:59
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 15:39
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 17:25
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 21:25
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-18 23:25
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 01:25
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 03:25
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 05:25
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 06:05
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 06:18
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!
Traceback (most recent call last):
  File "/root/zion_backend/epidemics.py", line 116, in main
    spread_epidemic(cur)
  File "/root/zion_backend/epidemics.py", line 90, in spread_epidemic
    cur.execute("""
  File "/usr/local/lib/python3.12/dist-packages/psycopg2/extras.py", line 236, in execute
    return super().execute(query, vars)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
psycopg2.errors.SyntaxError: syntax error at or near "ORDER"
LINE 4:                 ORDER BY treasury DESC LIMIT 1
                        ^


🦠 ZION Epidemics — 2026-05-19 08:07
==================================================
💊 Pharma corps profit from epidemic: +154 ZION
❌ Error: syntax error at or near "ORDER"
LINE 4:                 ORDER BY treasury DESC LIMIT 1
                        ^


🦠 ZION Epidemics — 2026-05-19 08:09
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 10:10
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 12:10
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 12:40
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 12:55
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 13:00
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 13:03
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 15:03
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!

🦠 ZION Epidemics — 2026-05-19 17:03
==================================================
No epidemic this cycle
✅ Epidemics cycle complete!
